Update 20230712 demo procedure

--- a/egg5-2/20230712.md
+++ b/egg5-2/20230712.md
@@ -345,7 +345,7 @@ artifactregistry.googleapis.com
 
 リポジトリを作成します。
 ```bash
-gcloud artifacts repositories create ${REPOSITORY_NAME} --repository-format=docker --location=${LOCATION} --description="Docker repository for Cloud Run demo 
+gcloud artifacts repositories create ${REPOSITORY_NAME} --repository-format=docker --location=${LOCATION} --description="Docker repository for Cloud Run demo"
 ```
 
 念の為、レポジトリが作成されたことを確認します。
